fix: Fixed z-index

--- a/Natours/starter/sass/layout/_navigation.scss
+++ b/Natours/starter/sass/layout/_navigation.scss
@@ -11,7 +11,7 @@
 		top: 6rem;
 		right: 6rem;
 		border-radius: 50%;
-		z-index: 2000;
+		z-index: 4;
 		box-shadow: 0 1rem 3rem rgba($color-black, 0.1);
 		text-align: center;
 		cursor: pointer;
@@ -25,7 +25,7 @@
 		top: 6.5rem;
 		right: 6.5rem;
 		background-image: radial-gradient($color-primary-light, $color-primary-dark);
-		z-index: 1000;
+		z-index: 2;
 		transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1);
 
 		//transform: scale(80);
@@ -36,7 +36,7 @@
 		position: fixed;
 		top: 0;
 		left: 0;
-		z-index: 1500;
+		z-index: 3;
 
 		opacity: 0;
 		width: 0;
